--- a/index.html
+++ b/index.html
@@ -77,6 +77,33 @@
                 </div>
             </div>
         </div>
+
+        <div class="about">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 col-sm-12">
+                        <div class="d-flex justify-content-between flex-column">
+                            <div class="about__text">
+                                <p class="about__profile">Profile</p>
+                                <h1 class="about__title">About Us</h1>
+                                <p class="about__desc">
+                                    CYou are using the old write up. We are using this now. Crafty
+                                    Metaverse is a multi-blockchain based virtual reality metaverse
+                                    platform to develop the most immersive, imaginative, and
+                                    addictive gaming experiences. We are providing our gaming
+                                    community with the near-real-world experience while using their
+                                    digital avatars. Our ecosystem will be a futuristic,
+                                    decentralized, and persistent 3D virtual metaverse gaming
+                                    platform especially for crypto enthusiasts, gamers, artists, and
+                                    metaverse fans.
+                                </p>
+                            </div>
+                            <img src="./img/progress.svg" alt="progress" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <script defer src="./js/bootstrap.min.js"></script>
         <script>
             const navbarToggler = document.querySelector(".navbar-toggler");
