--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
                             class="navbar navbar-expand-lg justify-content-between align-items-center"
                         >
                             <a class="navbar-brand" href="#"
-                                ><img class="nav-logo" src="./img/logo.svg" alt="logo"
+                                ><img
+                                    class="nav-logo"
+                                    src="./img/logo.svg"
+                                    alt="logo"
                             /></a>
                             <button
                                 class="navbar-toggler border-0"
@@ -29,7 +32,9 @@
                                 aria-expanded="false"
                                 aria-label="Toggle navigation"
                             >
-                                <span class="navbar-icon"><img src="./img/nav.svg" alt="" /></span>
+                                <span class="navbar-icon"
+                                    ><img src="./img/nav.svg" alt=""
+                                /></span>
                             </button>
                             <ul
                                 class="navbar-nav collapse navbar-collapse justify-content-end align-items-start"
@@ -64,11 +69,14 @@
             <div class="container d-flex hero__container px-lg-5">
                 <div class="row">
                     <div class="col-lg-6 col-sm-12 hero__row">
-                        <div class="hero d-flex justify-content-between flex-column">
+                        <div
+                            class="hero d-flex justify-content-between flex-column"
+                        >
                             <div class="hero__text">
                                 <p class="hero__desc">Crafty Metaverse</p>
                                 <h1 class="hero__title">
-                                    A SHARED, IMMERSIVE MULTI-BLOCKCHAIN BASED METAVERSE ECOSYSTEM
+                                    A SHARED, IMMERSIVE MULTI-BLOCKCHAIN BASED
+                                    METAVERSE ECOSYSTEM
                                 </h1>
                             </div>
                             <button class="hero__button">Invest Now</button>
@@ -79,28 +87,152 @@
         </div>
 
         <div class="about">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 col-sm-12">
-                        <div class="d-flex justify-content-between flex-column">
-                            <div class="about__text">
-                                <p class="about__profile">Profile</p>
-                                <h1 class="about__title">About Us</h1>
-                                <p class="about__desc">
-                                    CYou are using the old write up. We are using this now. Crafty
-                                    Metaverse is a multi-blockchain based virtual reality metaverse
-                                    platform to develop the most immersive, imaginative, and
-                                    addictive gaming experiences. We are providing our gaming
-                                    community with the near-real-world experience while using their
-                                    digital avatars. Our ecosystem will be a futuristic,
-                                    decentralized, and persistent 3D virtual metaverse gaming
-                                    platform especially for crypto enthusiasts, gamers, artists, and
-                                    metaverse fans.
-                                </p>
-                            </div>
-                            <img src="./img/progress.svg" alt="progress" />
-                        </div>
+            <div class="container-fluid about__container px-lg-5">
+                <div class="col-lg-6 col-sm-12 about__block">
+                    <div class="about__text">
+                        <p class="about__profile">Profile</p>
+                        <h2 class="about__title">About Us</h2>
+                        <p class="about__desc">
+                            You are using the old write up. We are using this
+                            now. Crafty Metaverse is a multi-blockchain based
+                            virtual reality metaverse platform to develop the
+                            most immersive, imaginative, and addictive gaming
+                            experiences. We are providing our gaming community
+                            with the near-real-world experience while using
+                            their digital avatars. Our ecosystem will be a
+                            futuristic, decentralized, and persistent 3D virtual
+                            metaverse gaming platform especially for crypto
+                            enthusiasts, gamers, artists, and metaverse fans.
+                        </p>
                     </div>
+                    <img
+                        class="about__img"
+                        src="./img/progress.svg"
+                        alt="progress"
+                    />
+                </div>
+            </div>
+        </div>
+        <div>
+            <div class="roadmap">
+                <div class="roadmap__title">
+                    <p class="roadmap__desc">Our Way</p>
+                    <h3 class="roadmap__h3">Roadmap</h3>
+                </div>
+
+                <div class="roadmap__q1">
+                    <p class="roadmap__q_title">
+                        Q1<br />Governance Token<br />Launch on BSC ($CMETA)
+                    </p>
+                    <ul class="roadmap__q_ul">
+                        <li class="roadmap__q_li">
+                            Launch Date: Jan 8th, 2022 Contract Audit
+                        </li>
+                        <li class="roadmap__q_li">
+                            TechAudit Completed on Jan 21st, 2022<br />5k
+                            Telegram members
+                        </li>
+                        <li class="roadmap__q_li">
+                            32k Telegram Members. CG and CMC listings
+                        </li>
+                        <li class="roadmap__q_li">
+                            Application Sent CEX Listings
+                        </li>
+                        <li class="roadmap__q_li">
+                            CoinsBit Listing - Feb 8th . Website Revamp
+                        </li>
+                        <li class="roadmap__q_li">
+                            Contracted UI/UX Developers
+                        </li>
+                    </ul>
+                    <p class="roadmap__q_more">
+                        More <img src="./img/arrow.svg" alt="/\" />
+                    </p>
+                </div>
+                <div class="roadmap__q2">
+                    <p class="roadmap__q_title">
+                        Q2<br />CMETA Ecosystem Begins
+                    </p>
+                    <ul class="roadmap__q_ul">
+                        <li class="roadmap__q_li">CMETA Staking Release</li>
+                        <li class="roadmap__q_li">
+                            SANKOFA Sidechain DEV Starts ($KOFA)
+                            <ul>
+                                <li>CEX Listings and Marketing</li>
+                                <li>Governance Token Launch on SOL ($CMETA)</li>
+                            </ul>
+                        </li>
+                        <li class="roadmap__q_li">
+                            Bridge BSC, ETH Smart Contracts<br>to Solana Contract
+                            <ul>
+                                <li>Social Media Marketing Pushü</li>
+                            </ul>
+                        </li>
+                        <li class="roadmap__q_li">10K Telegram Members</li>
+                        <li class="roadmap__q_li">10K Twitter Followers</li>
+                        <li class="roadmap__q_li">
+                            Contracted UI/UX Developers
+                        </li>
+                    </ul>
+                    <p class="roadmap__q_more">
+                        More <img src="./img/arrow.svg" alt="/\" />
+                    </p>
+                </div>
+                <div class="roadmap__q3">
+                    <p class="roadmap__q_title">
+                        Q3<br />Guardians of Lost Worlds Released to Public (PC)
+                    </p>
+                    <ul class="roadmap__q_ul">
+                        <li class="roadmap__q_li">
+                            Implement In-Game Staking ($KOFA Rewards)
+                        </li>
+                        <li class="roadmap__q_li">
+                            In-Game NFT Released
+                            <ul>
+                                <li>SANKOFA Sidechain on Test Net</li>
+                            </ul>
+                        </li>
+                        <li class="roadmap__q_li">
+                            Fiat On-Ramp Added
+                            <ul>
+                                <li>Gameplay Battle Mode Introduced</li>
+                                <li>Marketplace Introduced</li>
+                                <li>CEX Listings and Marketing</li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <p class="roadmap__q_more">
+                        More <img src="./img/arrow.svg" alt="/\" />
+                    </p>
+                </div>
+                <div class="roadmap__q4">
+                    <p class="roadmap__q_title">
+                        Q4<br />SANKOFA Mainnet Launch
+                    </p>
+                    <ul class="roadmap__q_ul">
+                        <li class="roadmap__q_li">
+                            Launch Date: Jan 8th, 2022 Contract Audit
+                        </li>
+                        <li class="roadmap__q_li">
+                            TechAudit Completed on Jan 21st, 2022<br />5k
+                            Telegram members
+                        </li>
+                        <li class="roadmap__q_li">
+                            32k Telegram Members. CG and CMC listings
+                        </li>
+                        <li class="roadmap__q_li">
+                            Application Sent CEX Listings
+                        </li>
+                        <li class="roadmap__q_li">
+                            CoinsBit Listing - Feb 8th . Website Revamp
+                        </li>
+                        <li class="roadmap__q_li">
+                            Contracted UI/UX Developers
+                        </li>
+                    </ul>
+                    <p class="roadmap__q_more">
+                        More <img src="./img/arrow.svg" alt="/\" />
+                    </p>
                 </div>
             </div>
         </div>
