--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="./css/bootstrap-grid.min.css" />
         <link rel="stylesheet" href="./css/bootstrap.min.css" />
         <link rel="stylesheet" href="./css/style.css" />
+        <link rel="stylesheet" href="./css/mobile.css" />
         <link rel="stylesheet" href="./css/fonts.css" />
     </head>
     <body>
@@ -159,11 +160,12 @@
                             SANKOFA Sidechain DEV Starts ($KOFA)
                             <ul>
                                 <li>CEX Listings and Marketing</li>
-                                <li>Governance Token Launch on SOL ($CMETA)</li>
+                                <li>Governance Token Launch on SOL\</li>
                             </ul>
                         </li>
                         <li class="roadmap__q_li">
-                            Bridge BSC, ETH Smart Contracts<br>to Solana Contract
+                            Bridge BSC, ETH Smart Contracts<br />to Solana
+                            Contract
                             <ul>
                                 <li>Social Media Marketing Pushü</li>
                             </ul>
@@ -180,7 +182,8 @@
                 </div>
                 <div class="roadmap__q3">
                     <p class="roadmap__q_title">
-                        Q3<br />Guardians of Lost Worlds Released to Public (PC)
+                        Q3<br />Guardians of Lost Worlds<br />Released to Public
+                        (PC)
                     </p>
                     <ul class="roadmap__q_ul">
                         <li class="roadmap__q_li">
@@ -236,7 +239,190 @@
                 </div>
             </div>
         </div>
+
+        <div class="brands">
+            <div class="brands__title">
+                <p class="brands__desc">no problem</p>
+                <h3 class="brands__h3">Our brands</h3>
+            </div>
+            <div class="brands__cards">
+                <div class="brands__card">
+                    <img
+                        class="brands__img"
+                        src="./img/guardians.png"
+                        alt="guardians"
+                    />
+                    <div class="guardians"></div>
+                    <div class="brands__card_text">
+                        <div class="brands__card_title">
+                            Guardians of Lost Worlds (P2E Game)
+                        </div>
+                        <div class="brands__card_desc">
+                            Crafty Metaverse will soon launch Guardians of Lost
+                            Worlds, the first cross-chain P2E gaming experience.
+                            Our game will be available on multiple blockchains
+                            and then eventually on our side chain (SANKOFA).
+                            This will give users a seamless gameplay experience
+                            with little to no gas fees that allow users to focus
+                            on the game rather than worrying about losing their
+                            returns.
+                        </div>
+                    </div>
+                </div>
+                <div class="brands__card">
+                    <img
+                        class="brands__img"
+                        src="./img/ecosystem.png"
+                        alt="ecosystem"
+                    />
+                    <div class="ecosystem"></div>
+                    <div class="brands__card_text">
+                        <div class="brands__card_title">
+                            Crafty Metaverse Ecosystem
+                        </div>
+                        <div class="brands__card_desc">
+                            Crafty Metaverse presents a Virtual Arts Studio
+                            where you can enhance your creativity by creating
+                            digital arts inspired by your game. A virtual
+                            marketplace to allow the users to trade and stake
+                            our $CMETA token and their NFTs. Negotiate with the
+                            digital avatars of other users to sell your NFTs at
+                            the best prices and generate passive income while
+                            playing
+                        </div>
+                    </div>
+                </div>
+                <div class="brands__card">
+                    <img
+                        class="brands__img"
+                        src="./img/sankofa.png"
+                        alt="sankofa"
+                    />
+                    <div class="sankofa"></div>
+                    <div class="brands__card_text">
+                        <div class="brands__card_title">SANKOFA</div>
+                        <div class="brands__card_desc">
+                            SANKOFA($KOFA) is an Ethereum sidechain that will be
+                            created with Guardians of Lost Worlds community in
+                            mind. LYQUID, the team behind Guardians of Lost
+                            Worlds, will build a reliable, fast and cheap
+                            network that could cater to the demands of the game.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="resources">
+            <div class="resources__title">
+                <p class="resources__desc">What we do</p>
+                <h3 class="resources__h3">Our resources</h3>
+            </div>
+            <div class="resources__block">
+                <div class="resources__text">
+                    <img
+                        class="resources__block_logo"
+                        src="./img/colorlogo.png"
+                        alt="logo"
+                    />
+                    <h3 class="resources__block_title">About toKen $Cmeta</h3>
+                    <p class="resources__block_desc">
+                        CMETA, a BSC-based cryptocurrency token will be the sole
+                        governance token on the platform. This means that every
+                        single transaction in the Crafty Metaverse space will be
+                        conducted with the $CMETA token
+                    </p>
+                    <button class="resources__block_button">
+                        Play (Coming Soon)
+                    </button>
+                </div>
+                <div class="resources__image">
+                    <img
+                        class="resources__block_img"
+                        src="./img/biglogo.png"
+                        alt="Лого"
+                    />
+                </div>
+            </div>
+        </div>
+        <div class="vrgame">
+            <div class="vrgame__title">
+                vr game vr game vr gamr vr game vr game
+            </div>
+            <div class="vrgame__desc">
+                CRAFTY METAVERSE CRAFTY METAVERSE CRAFTY METAVERSE CRAFTY
+                METAVERSE CRAFTY METAVERSE CRAFTY METAVERSE CRAFTY METAVERSE
+            </div>
+        </div>
+
+        <div class="game">
+            <div class="game__g">
+                <div class="games__block">
+                    <div class="game__image">
+                        <img
+                            class="game__block_img"
+                            src="./img/pers1.png"
+                            alt="Лого"
+                        />
+                    </div>
+                    <div class="resources__text">
+                        <h3 class="resources__block_title">Game</h3>
+                        <p class="resources__block_desc">
+                            The space will also offer avid gamers to be a part
+                            of an amazing 3D gaming experience (details to be
+                            published soon). Crafty Metaverse space will
+                            continuously evolve its 3D gaming space to include
+                            technologies such as VR headsets, augmented reality
+                            glasses, and game consoles.
+                        </p>
+                        <button class="resources__block_button">
+                            Invest Now
+                        </button>
+                    </div>
+                    <div class="game__image pers2">
+                        <img
+                            class="game__block_img"
+                            src="./img/pers2.png"
+                            alt="Лого"
+                        />
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <footer class="footer">
+            <div class="footer__title">
+                <div class="footer__desc">Questions</div>
+                <h3 class="footer__h3">Social media</h3>
+            </div>
+            <div class="footer__social">
+                <a href="#" class="footer__social_link">
+                    <img src="./img/Twitter.png" alt="Twitter" />
+                </a>
+                <a href="#" class="footer__social_link">
+                    <img src="./img/Telegram.png" alt="Twitter" />
+                </a>
+                <a href="#" class="footer__social_link">
+                    <img src="./img/YouTube.png" alt="Twitter" />
+                </a>
+                <a href="#" class="footer__social_link">
+                    <img src="./img/Discord.png" alt="Twitter" />
+                </a>
+            </div>
+            <div class="end">
+                <div class="end__one">
+                    <img class="end__planet" src="./img/global.png" alt="Глобус">
+                    Based in US<br>Active worldwide</div>
+                <div class="end__two">
+                    <div class="footer__contac">CONTACT</div>
+                    <div class="footer__contac con2">CONTACT</div>
+                </div>
+                <div class="end__three">info@craftymetaverse.com</div>
+            </div>
+        </footer>
+        
+
         <script defer src="./js/bootstrap.min.js"></script>
+
         <script>
             const navbarToggler = document.querySelector(".navbar-toggler");
             const heroContainer = document.querySelector(".hero__container");
